[package]
name = "ragnarok"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
cc="*"

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "fs-write-file", "fs-exists", "fs-read-dir", "fs-read-file", "fs-create-dir", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
lazy_static = "1.4.0"
shellexpand = "3.1.0"
lsp-types = "0.95.0"
tokio = "1.35.0"
env_logger = "0.10.1"
log = "0.4.20"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
